# macrozero

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Procfile  README.md  db.py  docker-compose.yml  github_webhook.py  pr_handler.py  procfile  pyproject.toml  server.py
agents/: agent.py  agents.py  code_review_instructions.md  code_review_prompt.txt  technical_summary_prompt.txt  tools.py
app/: .env.example  .gitignore  README.md  db.py  diff.txt  models.py  pyproject.toml  server.py
app/agents/: agents.py  tools.py
app/apis/: github_webhook.py
app/app/: agent.py  code_review_prompt.txt  github_webhook.py  pr_handler.py
app/integrations/: github_client.py
app/services/: agent_orchestrator.py  github_sync.py
backend/: .env.example  .gitignore  Dockerfile  README.md  __init__.py  db.py  main.py  models.py  pyproject.toml  server.py
backend/agents/: agents.py  prompts.py  runner.py  session_service.py  tools.py
backend/apis/: github.py  github_webhook.py
backend/certs/: macrozero-app.2025-09-07.private-key.pem
backend/core/: __init__.py  config.py  database.py
backend/integrations/: github_client.py
backend/middleware/: auth.py
backend/models/: __init__.py  commit.py  enums.py  issue.py  pull_request.py  repository.py  review.py
backend/routers/: auth.py
backend/services/: __init__.py  agent_orchestrator.py  commit.py  github.py  github_sync.py  issue.py  kimi_client.py  pull_request.py  repository.py
backend/utils/: jwt_manager.py  state_store.py
frontend/: .env  .env.example  README.md  index.html  package-lock.json  package.json  (+2 more)
(+19 files in other folders)
